Corrected spacing between images and added footer text.

--- a/Bday GIFt/styles.css
+++ b/Bday GIFt/styles.css
@@ -9,13 +9,13 @@ body {
 }
 
 #head-img {
-    width:200px;
+    width:300px;
     border-radius: 20%;
-    border: 2px solid rgb(192, 212, 255);
+    border: 3px solid rgb(192, 212, 255);
 }
 
 h1, h2, h3, h4 p {
-    text-shadow: 0px 0px 9px black;
+    text-shadow: 0px 10px 15px black;
 }
 
 #bday-age {
@@ -39,7 +39,7 @@ h1, h2, h3, h4 p {
 }
 
 .gift-section {
-    margin-top: 500px;
+    margin-top: 20px;
 }
 
 .gift-title {
@@ -47,11 +47,11 @@ h1, h2, h3, h4 p {
 }
 
 .gift-hint {
-    margin-top: 10px;
+    margin-top: 0;
 }
 
 .gift-img {
-    margin: 200 auto;
+    margin: 10 auto;
     width: 350px;
     height: 300px;
     border: 2px solid white;
@@ -75,3 +75,12 @@ h1, h2, h3, h4 p {
 #gift-img-staring:hover {
     background-image: url('images/staring.bmp');
 }
+
+#gift-img-cheers:hover {
+    background-image: url('images/cheers.jpg');
+}
+
+#gift-img-cheers {
+    height: 200px;
+}
+
